refactor assembler and expander classes for improved instruction handling and clarity